--- a/Brain Tumor Detection.ipynb
+++ b/Brain Tumor Detection.ipynb
@@ -42,13 +42,13 @@
         "from tensorflow.keras.callbacks import TensorBoard, ModelCheckpoint\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.metrics import f1_score\n",
-        "from sklearn.utils import shufflefdg\n",
+        "from sklearn.utils import shuffle\n",
         "import cv2\n",
         "import imutils\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "import time\n",
-        "from os import listdir\n",
+        "from os import listdirjadir\n",
         "\n",
         "%matplotlib inline"
       ]
